Rewrite layout files for posts to be less chaotic.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">NotReddit</string>
     <string name="sync_account_type" translatable="false">notreddit.jollyremedy.com</string>
-    <string name="subreddit_with_prefix">/r/%1$s</string>
+    <string name="subreddit_with_prefix">%1$s</string>
     <string name="item_post_comment_count">%1$d</string>
+    <string name="item_post_domain">(%1$s)</string>
 </resources>
