--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">NotReddit</string>
     <string name="sync_account_type" translatable="false">notreddit.jollyremedy.com</string>
     <string name="subreddit_with_prefix">%1$s</string>
+
     <string name="item_post_comment_count">%1$d</string>
     <string name="item_post_domain">(%1$s)</string>
+
+    <string name="item_comment_points">%1$s points</string>
 </resources>
