Bottom sheet switches between hot/new/best etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,12 @@
 
     <string name="login_success">Logged in as %1$s.</string>
     <string name="login_failure">There was an error logging in. Check your network connectivity, and ensure this app has the Contacts permission.</string>
+
+    <string name="post_listing_sort_hot">Hot</string>
+    <string name="post_listing_sort_new">New</string>
+    <string name="post_listing_sort_best">Best</string>
+    <string name="post_listing_sort_top">Top</string>
+    <string name="post_listing_sort_rising">Rising</string>
+    <string name="post_listing_sort_controversial">Controversial</string>
+
 </resources>
